# snakebot

./: .gitignore  .restyled.yaml  .travis.yml  LICENSE  README.md  bot.py  index.html  index.md  pyproject.toml  requirements.txt  run_tests.py  tests.py
.github/workflows/: codeql-analysis.yml
cogs/: admin.py  animals.py  apis.py  background_tasks.py  chess.py  compsci.py  crypto.py  economy.py  events.py  games.py  help.py  images.py  information.py  logger.py  logging.py  misc.py  moderation.py  music.py  owner.py  random.py  stocks.py  useful.py
cogs/db/: database.sqlite3
cogs/utils/: calculation.py  color.py  database.py  economy.py  formats.py  paginator.py  relativedelta.py  time.py  useful.py  util.py
css/: style.css
json/: bitcoin.json  economy.json  real.json  stocks.json
tests/: helpers.py  test_cogs.py  test_helpers.py
